Adding some image and set some element in right place

--- a/scss/_header-game-landing.scss
+++ b/scss/_header-game-landing.scss
@@ -1,24 +1,20 @@
+@import "mixing";
+
 .masthead {
   background-image: url(../css/images/bg-jungleruins.png);
   background-repeat: no-repeat;
   background-size: 100%;
   color: white;
+ 
 }
 
 .logo__game__title {
   font-family: bebas-neue;
 }
 
-.logo__game__header {
- background-image: url(../css/images/logo.svg);
- background-repeat: no-repeat;
- text-indent: -999px;
- text-decoration: none;
- display: block;
-}
+
  
 .logo-navigation {
-  background-image: url(../css/images/menu_icon.png);
   background-repeat:no-repeat;
    
 }
@@ -26,6 +22,30 @@
 .logo__game__button {
   background-color: rgb(248, 177, 45);
   border-radius: 5px;
-  width: 216px
+  width: 216px;
+  font-weight: 700;
 }
 
+.masthead__secondpart {
+   text-align: center;
+
+}
+
+.logo__game__lists {
+  @include list;
+  
+}
+
+.logo__game__list {
+  margin: 8px;
+}
+
+.logo__game__paragraph {
+  background-image: url(../css/images/scroll_down.png);
+  background-repeat: no-repeat;
+  background-position: 25px 20px;
+  max-width: 68px;
+  height: 32px;
+  margin-inline-start: 1rem;
+  left: 5px;
+}
