Fixed mobile header

--- a/scss/_header-game-landing.scss
+++ b/scss/_header-game-landing.scss
@@ -5,11 +5,24 @@
   background-repeat: no-repeat;
   background-size: 100%;
   color: white;
+  background-size: cover;
+  padding-inline-start: 1rem;
+  padding-block-start: 1rem;
+  
  
 }
 
 .logo__game__title {
   font-family: bebas-neue;
+  letter-spacing: 5px;
+  font-weight: 600;
+  line-height: 18px;
+  justify-content: center;
+  text-align: center;
+  color: #FFFFFF;
+  font-size: 33px;
+  line-height: 33px;
+  
 }
 
 
@@ -43,9 +56,29 @@
 .logo__game__paragraph {
   background-image: url(../css/images/scroll_down.png);
   background-repeat: no-repeat;
-  background-position: 25px 20px;
-  max-width: 68px;
+  background-position: 15px 20px;
+  max-width: 100px;
   height: 32px;
-  margin-inline-start: 1rem;
-  left: 5px;
+  text-transform: uppercase;
+  font-family: bebas-neue;
+  position: relative;
+  line-height: 22px;
+  font-size: 12px;
+  letter-spacing: 2px;
+  
+ 
+}
+
+.logo__game__navigation {
+  margin-inline-end: 1rem;
+}
+
+.logo__game__subtitle {
+  font-family: bebas-neue;
+  line-height: 18px;
+  letter-spacing: 2px;
+  font-weight: 100;
+  justify-content: center;
+  text-align: center;
+  position: relative;
 }
