--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -29,6 +29,9 @@
 
 .game__languages__choice {
     float: right;
+    position: relative;
+    bottom: 80px;
+    right: 100px;
 }
 
 .game__box__union {
@@ -39,6 +42,7 @@ select {
     color: white;
     background-color: transparent;
     border: transparent;
+    top: 0;
 }
 
 svg {
@@ -49,8 +53,17 @@ svg {
 }
 
 .game__languages__choice {
-    position: relative;
-    bottom: 70px;
-    right: 100px;
+    
 }
 
+.masthead__thirdpart {
+   display: flex;
+   justify-content: space-between;
+}
+
+.bar {
+  float: right;
+  bottom: 80px;
+  position: relative;
+  right: 10px;;
+}
