--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -2,16 +2,27 @@
   font-family: bebas-neue;
   font-weight: 400;
   font-style: normal;
-  src: url(../webroot/css/fonts/bebas-neue.woff) format("woff"); }
+  src: url(../css/fonts/bebas-neue1.woff) format("woff"); }
 
 .masthead {
   background-image: url(../css/images/bg-jungleruins.png);
   background-repeat: no-repeat;
   background-size: 100%;
-  color: white; }
+  color: white;
+  background-size: cover;
+  padding-inline-start: 1rem;
+  padding-block-start: 1rem; }
 
 .logo__game__title {
-  font-family: bebas-neue; }
+  font-family: bebas-neue;
+  letter-spacing: 5px;
+  font-weight: 600;
+  line-height: 18px;
+  justify-content: center;
+  text-align: center;
+  color: #FFFFFF;
+  font-size: 33px;
+  line-height: 33px; }
 
 .logo-navigation {
   background-repeat: no-repeat; }
@@ -35,11 +46,27 @@
 .logo__game__paragraph {
   background-image: url(../css/images/scroll_down.png);
   background-repeat: no-repeat;
-  background-position: 25px 20px;
-  max-width: 68px;
+  background-position: 15px 20px;
+  max-width: 100px;
   height: 32px;
-  margin-inline-start: 1rem;
-  left: 5px; }
+  text-transform: uppercase;
+  font-family: bebas-neue;
+  position: relative;
+  line-height: 22px;
+  font-size: 12px;
+  letter-spacing: 2px; }
+
+.logo__game__navigation {
+  margin-inline-end: 1rem; }
+
+.logo__game__subtitle {
+  font-family: bebas-neue;
+  line-height: 18px;
+  letter-spacing: 2px;
+  font-weight: 100;
+  justify-content: center;
+  text-align: center;
+  position: relative; }
 
 .logo__navigation__list {
   display: flex; }
@@ -63,7 +90,10 @@
   display: block; }
 
 .game__languages__choice {
-  float: right; }
+  float: right;
+  position: relative;
+  bottom: 80px;
+  right: 100px; }
 
 .game__box__union {
   display: none; }
@@ -71,17 +101,23 @@
 select {
   color: white;
   background-color: transparent;
-  border: transparent; }
+  border: transparent;
+  top: 0; }
 
 svg {
   position: absolute;
   top: 16px;
   right: 2rem; }
 
-.game__languages__choice {
+.masthead__thirdpart {
+  display: flex;
+  justify-content: space-between; }
+
+.bar {
+  float: right;
+  bottom: 80px;
   position: relative;
-  bottom: 70px;
-  right: 100px; }
+  right: 10px; }
 
 body {
   margin: 0; }
