--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -6,3 +6,9 @@
 }
 
   
+@font-face {
+    font-family: open-sans;
+    font-weight: 700;
+    font-style: normal;
+    src: url(../css/fonts/open-sans.woff) format('woff');
+}
