--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -4,13 +4,18 @@
   font-style: normal;
   src: url(../css/fonts/bebas-neue1.woff) format("woff"); }
 
+@font-face {
+  font-family: open-sans;
+  font-weight: 700;
+  font-style: normal;
+  src: url(../css/fonts/open-sans.woff) format("woff"); }
+
 .masthead {
   background-image: url(../css/images/bg-jungleruins.png);
   background-repeat: no-repeat;
-  background-size: 100%;
   color: white;
   background-size: cover;
-  padding-inline-start: 1rem;
+  padding-inline-start: 4rem;
   padding-block-start: 1rem; }
 
 .logo__game__title {
@@ -22,7 +27,8 @@
   text-align: center;
   color: #FFFFFF;
   font-size: 33px;
-  line-height: 33px; }
+  line-height: 33px;
+  align-items: center; }
 
 .logo-navigation {
   background-repeat: no-repeat; }
@@ -30,8 +36,10 @@
 .logo__game__button {
   background-color: #f8b12d;
   border-radius: 5px;
-  width: 216px;
-  font-weight: 700; }
+  max-width: 216px;
+  font-weight: 700;
+  justify-content: center;
+  text-align: center; }
 
 .masthead__secondpart {
   text-align: center; }
@@ -43,15 +51,13 @@
 .logo__game__list {
   margin: 8px; }
 
-.logo__game__paragraph {
+.logo__story {
   background-image: url(../css/images/scroll_down.png);
   background-repeat: no-repeat;
-  background-position: 15px 20px;
+  background-position: 15px 30px;
   max-width: 100px;
-  height: 32px;
   text-transform: uppercase;
   font-family: bebas-neue;
-  position: relative;
   line-height: 22px;
   font-size: 12px;
   letter-spacing: 2px; }
@@ -68,12 +74,25 @@
   text-align: center;
   position: relative; }
 
+/* This is for destop */
+@media (min-width: 1100px) {
+  .masthead__thirdpart {
+    position: relative; }
+  .logo__story {
+    text-align: center;
+    justify-content: center; }
+  .logo__game__navigation {
+    display: none; }
+  .masthead__thirdpart {
+    justify-content: center;
+    text-align: center; }
+  .logo__story {
+    justify-content: center;
+    text-align: center;
+    align-items: center; } }
+
 .logo__navigation__list {
   display: flex; }
-
-.logo__game__header {
-  width: 100px;
-  height: 50px; }
 
 .logo__link_main,
 .logo__link_about,
@@ -92,10 +111,10 @@
 .game__languages__choice {
   float: right;
   position: relative;
-  bottom: 80px;
+  bottom: 50px;
   right: 100px; }
 
-.game__box__union {
+.game__icone, .game__icon {
   display: none; }
 
 select {
@@ -109,15 +128,54 @@ svg {
   top: 16px;
   right: 2rem; }
 
+option {
+  background-color: black; }
+
 .masthead__thirdpart {
   display: flex;
   justify-content: space-between; }
 
 .bar {
   float: right;
-  bottom: 80px;
+  bottom: 50px;
   position: relative;
   right: 10px; }
+
+@media (min-width: 1100px) {
+  .game__box__union {
+    display: block; }
+  .bar-icon {
+    display: none; }
+  .game-icon2 {
+    right: 80px; }
+  .game__icon {
+    display: block;
+    right: 20px; }
+  .game__icone {
+    display: block;
+    right: 10px; }
+  .game__box__union {
+    right: 50px; }
+  .game__languages__choice {
+    margin-inline-end: 3rem;
+    bottom: 100px; }
+  .bar {
+    bottom: 100px; }
+  .logo__link_main,
+  .logo__link_about,
+  .logo__link_feature,
+  .logo__link_system,
+  .logo__link_quote {
+    display: block;
+    font-family: open-sans;
+    text-transform: uppercase;
+    margin: 1rem; }
+  .masthead__firstpart__list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 100px;
+    bottom: 130px; } }
 
 body {
   margin: 0; }
