--- a/scss/_header-game-landing.scss
+++ b/scss/_header-game-landing.scss
@@ -3,11 +3,12 @@
 .masthead {
   background-image: url(../css/images/bg-jungleruins.png);
   background-repeat: no-repeat;
-  background-size: 100%;
   color: white;
   background-size: cover;
-  padding-inline-start: 1rem;
+  padding-inline-start: 4rem;
   padding-block-start: 1rem;
+
+  
   
  
 }
@@ -22,6 +23,8 @@
   color: #FFFFFF;
   font-size: 33px;
   line-height: 33px;
+  align-items: center;
+
   
 }
 
@@ -35,8 +38,10 @@
 .logo__game__button {
   background-color: rgb(248, 177, 45);
   border-radius: 5px;
-  width: 216px;
+  max-width: 216px;
   font-weight: 700;
+  justify-content: center;
+  text-align: center;
 }
 
 .masthead__secondpart {
@@ -53,18 +58,17 @@
   margin: 8px;
 }
 
-.logo__game__paragraph {
+.logo__story {
   background-image: url(../css/images/scroll_down.png);
   background-repeat: no-repeat;
-  background-position: 15px 20px;
+  background-position: 15px 30px;
   max-width: 100px;
-  height: 32px;
   text-transform: uppercase;
   font-family: bebas-neue;
-  position: relative;
   line-height: 22px;
   font-size: 12px;
   letter-spacing: 2px;
+
   
  
 }
@@ -81,4 +85,44 @@
   justify-content: center;
   text-align: center;
   position: relative;
+}
+
+
+/* This is for destop */
+
+.masthead {
+  
+}
+@media (min-width : 1100px) {
+.masthead__thirdpart {
+  position: relative;
+}
+
+.logo__story {
+  text-align: center;
+  justify-content: center;
+  
+  
+  
+}
+
+.logo__game__navigation {
+  display: none;
+}
+
+
+.masthead__thirdpart {
+  justify-content: center;
+  text-align: center;
+  
+}
+
+.logo__story {
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
+
+
+
 }
