--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -5,10 +5,6 @@
 
 }
 
-.logo__game__header {
-    width: 100px;
-    height: 50px;
-}
 
 .logo__link_main,
 .logo__link_about,
@@ -30,11 +26,12 @@
 .game__languages__choice {
     float: right;
     position: relative;
-    bottom: 80px;
+    bottom: 50px;
     right: 100px;
 }
 
-.game__box__union {
+
+.game__icone,.game__icon {
     display: none;
 }
 
@@ -52,8 +49,8 @@ svg {
 
 }
 
-.game__languages__choice {
-    
+option {
+    background-color: black;
 }
 
 .masthead__thirdpart {
@@ -63,7 +60,72 @@ svg {
 
 .bar {
   float: right;
-  bottom: 80px;
+  bottom: 50px;
   position: relative;
   right: 10px;;
+}
+
+
+
+
+
+@media (min-width : 1100px) {
+    .game__box__union {
+    display: block;
+}
+
+.bar-icon {
+  display: none;
+}
+
+.game-icon2 {
+    right: 80px;
+}
+.game__icon  {
+  display: block;
+  right: 20px;
+}
+
+.game__icone{
+    display: block;
+    right: 10px;
+}
+
+
+.game__box__union {
+   right: 50px;
+}
+
+.game__languages__choice{
+    margin-inline-end: 3rem;
+    bottom: 100px;
+}
+
+.bar {
+   bottom: 100px; 
+} 
+
+
+.logo__link_main,
+.logo__link_about,
+.logo__link_feature,
+.logo__link_system,
+.logo__link_quote{
+    display: block;
+    font-family: open-sans;
+    text-transform: uppercase;
+    margin: 1rem;
+    
+    
+}
+
+.masthead__firstpart__list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 100px;
+    bottom: 130px;
+  
+}
+
 }
