Fixed some padding and chage html

--- a/scss/_header-game-landing.scss
+++ b/scss/_header-game-landing.scss
@@ -5,8 +5,9 @@
   background-repeat: no-repeat;
   color: white;
   background-size: cover;
-  padding-inline-start: 4rem;
+  padding-inline-start: 2rem;
   padding-block-start: 1rem;
+  margin: auto;
 
   
   
