--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -1,9 +1,17 @@
 
-
+.asthead__firstpart {
+    padding: 1rem;
+}
 .logo__navigation__list {
     display: flex;
 
 }
+
+.masthead__secondpart {
+    padding-block-start: 200px;
+  
+}
+
 
 
 .logo__link_main,
@@ -16,36 +24,39 @@
   
 
 .logo__game__header {
- background-image: url(../css/images/logo.svg);
- background-repeat: no-repeat;
- text-indent: -999px;
- text-decoration: none;
- display: block;
+   left: 0; 
+   margin-inline-start: 1rem;
+   margin-block-end: 3rem;
+   position: absolute;
+   margin-top: 0;
 }
 
 .game__languages__choice {
     float: right;
     position: relative;
-    bottom: 50px;
+    bottom: 25px;
     right: 100px;
 }
 
 
 .game__icone,.game__icon {
     display: none;
+
 }
 
 select {
     color: white;
     background-color: transparent;
     border: transparent;
-    top: 0;
+    top: 0; 
+    position: relative;
 }
 
 svg {
   position: absolute;
   top: 16px;
-  right: 2rem;
+  right: 1rem;
+
 
 }
 
@@ -56,22 +67,41 @@ option {
 .masthead__thirdpart {
    display: flex;
    justify-content: space-between;
+   padding-block-start: 100px;
+   padding-block-end: 50px;
 }
 
 .bar {
   float: right;
-  bottom: 50px;
-  position: relative;
-  right: 10px;;
-}
 
+ 
+}
+.bar-image {
+  left: 4rem;
+  top:0;
+  position: relative;
+}
 
 
 
 
 @media (min-width : 1100px) {
+
+    select {
+    color: white;
+    background-color: transparent;
+    border: transparent;
+    top: 3rem; 
+    right: inherit;
+    position: absolute;
+}
     .game__box__union {
     display: block;
+}
+
+.logo__game__header {
+ background-size: 5%;
+ height: 100px;
 }
 
 .bar-icon {
@@ -84,6 +114,11 @@ option {
 .game__icon  {
   display: block;
   right: 20px;
+  
+}
+.logo__story__game__paragraph {
+    align-items: center;
+    text-align: center;
 }
 
 .game__icone{
