--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -12,3 +12,10 @@
     font-style: normal;
     src: url(../css/fonts/open-sans.woff) format('woff');
 }
+
+@font-face {
+    font-family: open-sans;
+    font-weight: 400;
+    font-style: normal;
+    src: url(../css/fonts/open-sans.woff) format('woff');
+}
