--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -10,6 +10,12 @@
   font-style: normal;
   src: url(../css/fonts/open-sans.woff) format("woff"); }
 
+@font-face {
+  font-family: open-sans;
+  font-weight: 400;
+  font-style: normal;
+  src: url(../css/fonts/open-sans.woff) format("woff"); }
+
 .masthead {
   background-image: url(../css/images/bg-jungleruins.png);
   background-repeat: no-repeat;
@@ -204,3 +210,33 @@ option {
 
 body {
   margin: 0; }
+
+.game__first__section--header,
+.game__first__section--subheader {
+  font-family: bebas-neue;
+  letter-spacing: 3px; }
+
+.game__first__section__heading {
+  padding-top: 10px; }
+
+.game__first__section {
+  background-image: url(../css/images/bg_big_first.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  color: white; }
+
+.container {
+  background: rgba(10, 0, 0, 0.8);
+  top: 0;
+  left: 0;
+  width: 1400;
+  height: 100%; }
+
+.game__first__section__paragraph--detail {
+  font-family: open-sans;
+  font-weight: normal;
+  line-height: 22px; }
+
+.game__first__section--paragraph {
+  border-top: 3px solid white; }
