--- a/scss/_first-section.scss
+++ b/scss/_first-section.scss
@@ -4,32 +4,6 @@
     letter-spacing: 3px;
 }
 
-
-
-.game__first__section__heading {
-   padding-top: 10px;
-}
-
-.game__first__section {
-    background-image: url(../css/images/bg_big_first.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    color: white;
-   
-   
-
-}
-
-.container {
-//   position: absolute;
-  background: rgba(10, 0, 0, 0.8);
-  top: 0;
-  left: 0;
-  width: 1400;
-  height: 100%;
-}
-
 .game__first__section__paragraph--detail {
     font-family: open-sans;
     font-weight: normal;
@@ -37,6 +11,86 @@
    
 }
 
+.game__first__section {
+    background-image: url(../css/images/bg_big_first.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
+
+}
+
+.container {
+  background: rgba(10, 0, 0, 0.8);
+  top: 0;
+  left: 0;
+  padding: 32px;
+}
+
 .game__first__section--paragraph {
    border-top: 3px solid white;
 }
+
+
+
+// .game__first__section__heading {
+//    padding-top: 10px;
+// }
+
+
+
+
+
+
+
+
+
+// .game__first__section__heading {
+//     padding: 0;
+// }
+// .game__images__lists {
+//     list-style: none;
+//     margin: 0;
+//     padding: 0;
+//     position: relative;
+//     padding-bottom: calc(100% * 273 / 249);
+//     padding-top: 100px;
+//     display: flex;
+    
+// }
+
+
+
+
+
+
+
+
+// .game__images {
+//     max-width: 100%;
+// }
+
+
+// .game__images__screenshot1,
+// .game__images__screenshot2,
+// .game__images__screenshot3 {
+//   max-width: 100%;
+//    display: block
+// }
+
+// .game__images__screenshot1 {
+//      top: 0;
+//      left: 0;
+//      right : calc(100% * 24 / 249);
+//      z-index: 3;
+//      opacity: 0.9; 
+   
+// }
+
+// .game__images__screenshot2 {
+   
+ 
+// }
+
+// .game__images__screenshot3 {
+  
+// }
