--- a/scss/_first-section.scss
+++ b/scss/_first-section.scss
@@ -32,65 +32,67 @@
 
 
 
-// .game__first__section__heading {
-//    padding-top: 10px;
-// }
+.game__image {
+    padding: 2rem 40px;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.game__images__lists {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    padding-bottom: calc(100% * 273 / 249);
+    padding-top: 50%;
+}
+
+.game__images__list {
+    position: absolute;
+}
 
 
-
-
-
-
-
-
-
-// .game__first__section__heading {
-//     padding: 0;
-// }
-// .game__images__lists {
-//     list-style: none;
-//     margin: 0;
-//     padding: 0;
-//     position: relative;
-//     padding-bottom: calc(100% * 273 / 249);
-//     padding-top: 100px;
-//     display: flex;
-    
-// }
-
-
-
-
-
-
-
-
-// .game__images {
-//     max-width: 100%;
-// }
-
-
-// .game__images__screenshot1,
-// .game__images__screenshot2,
-// .game__images__screenshot3 {
-//   max-width: 100%;
-//    display: block
-// }
-
-// .game__images__screenshot1 {
-//      top: 0;
-//      left: 0;
-//      right : calc(100% * 24 / 249);
-//      z-index: 3;
-//      opacity: 0.9; 
+.game__images__screenshot1 {
+     top: 0;
+     left: 0;
+     right : calc(100% * 24 / 249);
+     z-index: 3;
+     
    
-// }
+}
 
-// .game__images__screenshot2 {
-   
+.game__image {
+    max-width: 100%;
+    display: block;
+}
+.game__images {
+    max-width: 100%;
+}
+
+.game__images__screenshot2 {
+  z-index: 2;
+  top: 55%;
+  transform: translateY(-50%) scale(calc(249 / 273));
+  right: calc(100% * 12 / 249);
+  left: calc(100% * 12 / 249);
+  transform-origin: 100% 0%;
  
-// }
+}
 
-// .game__images__screenshot3 {
-  
-// }
+.game__images__screenshot3 {
+  z-index: 1;
+  top: calc(100% * 23 / 249);
+  left: calc(100% * 23 / 249);
+  bottom : calc(100% * 23 / 249);
+}
+
+.game__images__screenshot1,
+.game__images__screenshot2,
+.game__images__screenshot3 {
+  max-width: 100%;
+   display: block
+}
+
+
+
+
