fixed second section of the game

--- a/scss/_first-section.scss
+++ b/scss/_first-section.scss
@@ -18,6 +18,9 @@
     color: white;
 
 }
+.second__section__info {
+  margin-inline-start: 3rem;
+}
 
 .container {
   background: rgba(10, 0, 0, 0.8);
