--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -73,6 +73,7 @@ option {
 
 .bar {
   float: right;
+  margin-block-start: -50px;
 
  
 }
@@ -100,7 +101,7 @@ option {
 }
 
 .logo__game__header {
- background-size: 5%;
+ background-size: 50%;
  height: 100px;
 }
 
