--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -5,6 +5,13 @@
     src: url(../css/fonts/bebas-neue1.woff) format('woff');
 }
 
+@font-face {
+    font-family: bebas-neue;
+    font-weight: 700;
+    font-style: normal;
+    src: url(../css/fonts/bebas-neue1.woff) format('woff');
+}
+
   
 @font-face {
     font-family: open-sans;
