Start third section

--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -329,3 +329,8 @@ body {
 
 .second__section__info {
   margin-inline-start: 300px; }
+
+.game__third__section {
+  background-image: url(../css/images/bg_image_3big.png);
+  background-size: cover;
+  padding-block-start: 2rem; }
