Fixed html without class name yet and upload all images which are need to be used

--- a/scss/_third-section.scss
+++ b/scss/_third-section.scss
@@ -2,4 +2,5 @@
     background-image: url(../css/images/bg_image_3big.png);
     background-size: cover;
     padding-block-start: 2rem;
+    color: white
 }
