Uploade all bebas fonts

--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -9,7 +9,7 @@
     font-family: bebas-neue;
     font-weight: 700;
     font-style: normal;
-    src: url(../css/fonts/bebas-neue1.woff) format('woff');
+    src: url(../css/fonts/bebasneuebold.woff) format('woff');
 }
 
   
