--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -6,7 +6,7 @@
 }
 
 @font-face {
-    font-family: bebas-neue;
+    font-family: bebas-neue-bold;
     font-weight: 700;
     font-style: normal;
     src: url(../css/fonts/bebasneuebold.woff) format('woff');
@@ -21,8 +21,8 @@
 }
 
 @font-face {
-    font-family: open-sans;
+    font-family: opensans-regular;
     font-weight: 400;
     font-style: normal;
-    src: url(../css/fonts/open-sans.woff) format('woff');
+    src: url(../css/fonts/opensans-regular.woff) format('woff');
 }
