--- a/scss/_mixing.scss
+++ b/scss/_mixing.scss
@@ -2,3 +2,15 @@
     list-style: none;
     display: flex;
 }
+
+@mixin font-size-small {
+    line-height: 18px;
+    font-size: 18px;
+    letter-spacing: 2px;
+}
+
+@mixin font-size-highter {
+    line-height: 33px;
+    font-size: 33px;
+    letter-spacing: 3px;
+}
