Set @include in some selectore

--- a/scss/_header-game-landing.scss
+++ b/scss/_header-game-landing.scss
@@ -15,18 +15,19 @@
 }
 
 .logo__game__title {
-  font-family: bebas-neue;
-  letter-spacing: 5px;
-  font-weight: 600;
-  line-height: 18px;
+  font-family: bebas-neue-bold;
   justify-content: center;
   text-align: center;
   color: #FFFFFF;
-  font-size: 33px;
-  line-height: 33px;
   align-items: center;
+  @include font-size-highter
 
   
+}
+
+.logo__game__subtitle {
+  @include font-size-small;
+  color: #FFFFFF;
 }
 
 
