Fixed table in third section

--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -2,7 +2,7 @@
     font-family: bebas-neue;
     font-weight: 400;
     font-style: normal;
-    src: url(../css/fonts/bebas-neue1.woff) format('woff');
+    src: url(../css/fonts/bebasneuelight.woff) format('woff');
 }
 
 @font-face {
