--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -2,7 +2,7 @@
   font-family: bebas-neue;
   font-weight: 400;
   font-style: normal;
-  src: url(../css/fonts/bebas-neue1.woff) format("woff"); }
+  src: url(../css/fonts/bebasneuelight.woff) format("woff"); }
 
 @font-face {
   font-family: bebas-neue-bold;
@@ -348,22 +348,24 @@ body {
   background-size: cover;
   padding-block-start: 1rem;
   color: white;
-  margin-block-start: -2rem;
-  text-align: center;
-  align-items: center; }
+  margin-block-start: -2rem; }
 
 .game__third__section--header {
   font-family: bebas-neue-bold;
   line-height: 18px;
   font-size: 18px;
   letter-spacing: 2px;
-  color: #FFFFFF; }
+  color: #FFFFFF;
+  text-align: center;
+  justify-content: center; }
 
 .game__third__section--subheader {
   font-family: bebas-neue-bold;
   line-height: 33px;
   font-size: 33px;
-  letter-spacing: 3px; }
+  letter-spacing: 3px;
+  text-align: center;
+  justify-content: center; }
 
 .game__third__section__table--header {
   color: #FFB548;
@@ -371,4 +373,33 @@ body {
   font-family: bebas-neue-bold;
   line-height: 18px;
   font-size: 18px;
-  letter-spacing: 2px; }
+  letter-spacing: 2px;
+  margin-inline-start: 1rem; }
+
+table {
+  border: 1px gray solid;
+  margin-inline-end: 1rem;
+  margin-inline-start: 1rem;
+  margin-block-end: 1rem; }
+
+.game__third__section__tablerow {
+  border-right: 1px gray solid; }
+
+.game__third__section__table-paragraph {
+  font-family: opensans-regular;
+  font-size: 14px;
+  line-height: 16px;
+  margin-inline-start: 1rem; }
+
+.game__third__section__tablecell {
+  border-top: 1px gray solid;
+  border-right: 1px gray solid; }
+
+.game__third__section__tablecell--first-row {
+  border-right: 1px gray solid; }
+
+.game__third__section__tablecell--secondrowcol {
+  border-top: 1px gray solid; }
+
+.game__third__section__tablecell--lastrow {
+  border-top: 1px gray solid; }
