--- a/scss/_second-section.scss
+++ b/scss/_second-section.scss
@@ -1,7 +1,7 @@
 .game__second__section {
     background-image: url(../css/images/bg_image_big.png);
     background-size: cover;
-   
+    height: 515px;
     
     
     
@@ -9,6 +9,7 @@
 
 .second__container {
     padding-block-start: 1rem;
+    height: 515px;
     background: radial-gradient(17.45% 34.77% at 31.45% 40.62%, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0) 0%, rgba(4, 5, 6, 0.520671) 25.99%, rgba(6, 7, 8, 0.739601) 65.03%, #080A0B 99.74%);
 }
 
