--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -260,7 +260,6 @@ body {
   border-top: 3px solid white; }
 
 .game__image {
-  padding: 2rem 40px;
   max-width: 100%;
   max-height: 100%; }
 
@@ -310,10 +309,12 @@ body {
 
 .game__second__section {
   background-image: url(../css/images/bg_image_big.png);
-  background-size: cover; }
+  background-size: cover;
+  height: 515px; }
 
 .second__container {
   padding-block-start: 1rem;
+  height: 515px;
   background: radial-gradient(17.45% 34.77% at 31.45% 40.62%, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0) 0%, rgba(4, 5, 6, 0.520671) 25.99%, rgba(6, 7, 8, 0.739601) 65.03%, #080A0B 99.74%); }
 
 .game__second__section--header {
@@ -348,7 +349,12 @@ body {
   background-size: cover;
   padding-block-start: 1rem;
   color: white;
-  margin-block-start: -2rem; }
+  margin-block-start: -2rem;
+  background-position: bottom;
+  position: relative; }
+
+.third_container {
+  height: 710px; }
 
 .game__third__section--header {
   font-family: bebas-neue-bold;
@@ -374,13 +380,16 @@ body {
   line-height: 18px;
   font-size: 18px;
   letter-spacing: 2px;
-  margin-inline-start: 1rem; }
+  margin-inline-start: 1rem;
+  margin-block-start: 5px;
+  margin-block-end: 0; }
 
 table {
   border: 1px gray solid;
   margin-inline-end: 1rem;
   margin-inline-start: 1rem;
-  margin-block-end: 1rem; }
+  position: absolute;
+  height: 317px; }
 
 .game__third__section__tablerow {
   border-right: 1px gray solid; }
@@ -389,7 +398,8 @@ table {
   font-family: opensans-regular;
   font-size: 14px;
   line-height: 16px;
-  margin-inline-start: 1rem; }
+  margin-inline-start: 1rem;
+  font-weight: normal; }
 
 .game__third__section__tablecell {
   border-top: 1px gray solid;
