Create fith file and upload an image for that

--- a/scss/_fourth-section.scss
+++ b/scss/_fourth-section.scss
@@ -103,3 +103,7 @@
 .game__fourth__section__aboutperson--date{
     padding-inline-start: 16px;
 }
+
+.game__fourth__section__about--container {
+    padding-block-end: 16px;
+}
