--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -496,3 +496,6 @@ table {
 .game__fourth__section__aboutperson--info,
 .game__fourth__section__aboutperson--date {
   padding-inline-start: 16px; }
+
+.game__fourth__section__about--container {
+  padding-block-end: 16px; }
