Fixed the second section change the html

--- a/scss/_second-section.scss
+++ b/scss/_second-section.scss
@@ -2,18 +2,22 @@
     background-image: url(../css/images/bg_image_big.png);
     background-size: cover;
     height: 515px;
+    background-repeat: no-repeat;
+    
+    
     
     
     
 }
 
-.second__container {
+.game__second__section__container {
     padding-block-start: 1rem;
     height: 515px;
+    padding-inline-start: 100px;
     background: radial-gradient(17.45% 34.77% at 31.45% 40.62%, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0) 0%, rgba(4, 5, 6, 0.520671) 25.99%, rgba(6, 7, 8, 0.739601) 65.03%, #080A0B 99.74%);
 }
 
-.game__second__section--header {
+.game__second__section__header {
     font-family: bebas-neue;
     font-size: 18px;
     letter-spacing: 2px;
@@ -21,14 +25,23 @@
     color: white;
 }
 
-.game__second__section--subheader {
+.game__second__section__navigation {
+    list-style: none;
+    padding-inline-start: 0;
+}
+
+.game__second__section__header--info {
     font-family: bebas-neue;
     letter-spacing: 3px;
     font-size: 33px;
     color: white;
 }
 
-.game__second__section--smalheader {
+.game__second__section__navigation--list {
+
+}
+
+.game__second__section__summary {
     color: #FFB548;
     font-family:  bebas-neue;
     letter-spacing: 2px;
@@ -36,7 +49,7 @@
     font-size: 21px;
 }
 
-.game__second__section--paragraph {
+.game__second__section__detail {
     color: white;
     font-family: open-sans;
 }
