fixed footer for the mobile

--- a/scss/_fith-section.scss
+++ b/scss/_fith-section.scss
@@ -2,7 +2,7 @@
     background-image: url(../css/images/bg-imag_fith.png);
     background-repeat: no-repeat;
     background-size: contain;
-    height: 523px;
+    min-height: 523px;
     
 }
 
