--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -109,6 +109,7 @@
 
 .footer__game__navigation__security {
     list-style: none;
+    padding-bottom: 1rem;
  
 }
 
@@ -122,6 +123,7 @@
     font-size: 12px;
     letter-spacing: 0.1em;
     text-transform: uppercase;
+    
 }
 
 .footer__game__link__security {
